# Delphi-Serial

./: .gitignore  .gitmodules  DelphiSerial.groupproj  LICENSE  README.md
generator/protobuf/: CMakeLists.txt
generator/protobuf/schema/: addressbook.proto  message.proto  oneof.proto
generator/protobuf/src/: delphicodegenerator.cpp  delphicodegenerator.h  delphiunitgenerator.cpp  delphiunitgenerator.h  delphiutils.cpp  delphiutils.h  main.cpp
generator/protobuf/src/schema/: addressbook.pb.cc  addressbook.pb.h  addressbook_main.cpp  main.cpp  message.pb.cc  message.pb.h  message_main.cpp  pbjson.cpp  pbjson.h
project/: DelphiSerial.optset  DelphiSerialPkg.dpk  DelphiSerialPkg.dproj  DelphiSerialProfiler.dpr  DelphiSerialProfiler.dproj  DelphiSerialUnitTest.dpr  DelphiSerialUnitTest.dproj
source/: Delphi.Serial.Avro.pas  Delphi.Serial.Bson.pas  Delphi.Serial.Cbor.pas  Delphi.Serial.Factory.pas  Delphi.Serial.Interfaces.pas  Delphi.Serial.Json.InputSerializer.pas  Delphi.Serial.Json.OutputSerializer.pas  Delphi.Serial.Json.pas  Delphi.Serial.MessagePack.pas  Delphi.Serial.Protobuf.InputSerializer.pas  Delphi.Serial.Protobuf.OutputSerializer.pas  Delphi.Serial.Protobuf.Reader.pas  Delphi.Serial.Protobuf.Serializer.pas  Delphi.Serial.Protobuf.pas  Delphi.Serial.ProtobufTypes.pas  Delphi.Serial.ProtobufUtils.pas  Delphi.Serial.RttiObserver.pas  Delphi.Serial.RttiVisitor.pas  Delphi.Serial.Sbe.pas  Delphi.Serial.Thrift.pas  Delphi.Serial.Toml.pas  Delphi.Serial.Utils.pas  Delphi.Serial.Xml.pas  Delphi.Serial.Yaml.pas  Delphi.Serial.pas
source/Json/: Delphi.Serial.Json.InputSerializer.pas  Delphi.Serial.Json.OutputSerializer.pas
source/Protobuf/: Delphi.Serial.Protobuf.InputSerializer.pas  Delphi.Serial.Protobuf.OutputSerializer.pas  Delphi.Serial.Protobuf.Reader.pas  Delphi.Serial.Protobuf.Types.pas  Delphi.Serial.Protobuf.Writer.pas  Delphi.Serial.ProtobufTypes.pas
test/: Delphi.Serial.AvroTest.pas  Delphi.Serial.BsonTest.pas  Delphi.Serial.CborTest.pas  Delphi.Serial.FactoryTest.pas  Delphi.Serial.Json.OutputSerializerTest.pas  Delphi.Serial.JsonTest.pas  Delphi.Serial.MessagePackTest.pas  Delphi.Serial.Protobuf.OutputSerializerTest.pas  Delphi.Serial.Protobuf.SerializerTest.pas  Delphi.Serial.ProtobufTest.pas  Delphi.Serial.ProtobufTypesTest.pas  Delphi.Serial.ProtobufUtilsTest.pas  Delphi.Serial.RttiVisitorTest.pas  Delphi.Serial.SbeTest.pas  Delphi.Serial.ThriftTest.pas  Delphi.Serial.TomlTest.pas  Delphi.Serial.UtilsTest.pas  Delphi.Serial.XmlTest.pas  Delphi.Serial.YamlTest.pas  UInt16Enum.inc  UInt32Enum.inc
test/Json/: Delphi.Serial.Json.OutputSerializerTest.pas
test/Protobuf/: Delphi.Serial.Protobuf.OutputSerializerTest.pas  Delphi.Serial.Protobuf.ReaderWriterTest.pas  (+1 more)
